resources/jenkins-service/base/jenkins-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-service
  template:
    metadata:
      labels:
        app: jenkins-service
    spec:
      securityContext:
        runAsUser: 0 # Specifies that the pod should run as root
      containers:
      - name: jenkins-service
        image: jenkins/jenkins
        ports:
        - containerPort: 80
