resources/jenkins-service/base/jenkins-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
